--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="image-half-round-shape"></div>
                         <div class="social-link">
                             <a href="https://www.linkedin.com/in/mohdkurbanali/" target="_blank"><i class="icofont-linkedin"></i></a>
-                            <a href="#" target="_blank"><i class="icofont-upwork">Upwork</i></a>
+                            <a href="https://www.upwork.com/freelancers/~01c65fee493f68a312" target="_blank"><i class="icofont-upwork">Upwork</i></a>
                             <a href="https://www.instagram.com/freelancewebdeveloper95/" target="_blank"><i class="icofont-instagram"></i></a>
                             <a href="mailto:ka0867734@gmail.com" target="_blank"><i class="icofont-email"></i></a>                            
                         </div>
